--- a/7.0.6-fpm-memcached/Dockerfile
+++ b/7.0.6-fpm-memcached/Dockerfile
@@ -27,6 +27,13 @@ RUN apt-get update && apt-get install -y \
     && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
     && docker-php-ext-install gd
 
+#memcached support php7
+RUN apt-get install -y libmemcached-dev \
+  && git clone -b php7 https://github.com/php-memcached-dev/php-memcached /usr/src/php/ext/memcached \
+  && cd /usr/src/php/ext/memcached \
+  && docker-php-ext-configure memcached \
+  && docker-php-ext-install memcached
+
 #COPY php.ini    /usr/local/etc/php/conf.d/
 
 EXPOSE 9000
